--- a/texfiles/sources.bib
+++ b/texfiles/sources.bib
@@ -2,7 +2,7 @@
     author = {Guruswami, Venkatesan},
     title = {Introduction to Coding Theory},
     year = {2010},
-    url = {http://www.cs.cmu.edu/~venkatg/teaching/codingtheory/notes/notes1.pdf},
+    url = {\url{http://www.cs.cmu.edu/~venkatg/teaching/codingtheory/notes/notes1.pdf}},
 }
 
 @article{Codes1950Hamming,
@@ -13,15 +13,15 @@
     volume = {26},
     number = {2},
     pages = {147--160},
-    url = {http://sb.fluomedia.org/hamming/},
+    url = {\url{http://sb.fluomedia.org/hamming/}},
 }
 
 @article{HammingBarcodes2012BystrykhLeonid,
     author = {Bystrykh, Leonid V.},
-    title = {Generalized DNA Barcode Design Based on Hamming Codes},
+    title = {Generalized {DNA} Barcode Design Based on {Hamming} Codes},
     year = {2012},
     journal = {PLOS ONE},
-    url = {http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0036852},
+    url = {\url{http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0036852}},
 }
 
 @article{Communication1948Shannon,
@@ -31,7 +31,7 @@
     journal = {The Bell System Technical Journal},
     volume = {27},
     pages = {379–423, 623–656},
-    url = {http://affect-reason-utility.com/1301/4/shannon1948.pdf},
+    url = {\url{http://affect-reason-utility.com/1301/4/shannon1948.pdf}},
 }
 
 @article{PolynomialCodes2017MaddahAvestimehr,
@@ -43,71 +43,71 @@
     journal   = {CoRR},
     volume    = {abs/1705.10464},
     year      = {2017},
-    url       = {http://arxiv.org/abs/1705.10464},
+    url       = {\url{http://arxiv.org/abs/1705.10464}},
     archivePrefix = {arXiv},
     eprint    = {1705.10464},
     timestamp = {Wed, 14 Jun 2017 07:59:47 +0200},
-    biburl    = {https://dblp.org/rec/bib/journals/corr/YuMA17a},
+    biburl    = {\url{https://dblp.org/rec/bib/journals/corr/YuMA17a}},
     bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
 @article{HadamardZ2Z2012RioRifa,
     author    = {{\'{A}}ngel del R{\'{\i}}o and
     Josep Rif{\`{a}}},
-    title     = {Families of Hadamard Z2Z4Q8-codes},
+    title     = {Families of {Hadamard} {Z2Z4Q8}-codes},
     journal   = {CoRR},
     volume    = {abs/1211.5251},
     year      = {2012},
-    url       = {http://arxiv.org/abs/1211.5251},
+    url       = {\url{http://arxiv.org/abs/1211.5251}},
     archivePrefix = {arXiv},
     eprint    = {1211.5251},
     timestamp = {Wed, 07 Jun 2017 14:42:53 +0200},
-    biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1211-5251},
+    biburl    = {\url{https://dblp.org/rec/bib/journals/corr/abs-1211-5251}},
     bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
 @article{HadamardMatrices1978HedayatWallis,
     ISSN = {00905364},
-    URL = {http://www.jstor.org/stable/2958712},
+    url = {\url{http://www.jstor.org/stable/2958712}},
     author = {A. Hedayat and W. D. Wallis},
     journal = {The Annals of Statistics},
     number = {6},
     pages = {1184-1238},
     publisher = {Institute of Mathematical Statistics},
-    title = {Hadamard Matrices and Their Applications},
+    title = {{Hadamard} Matrices and Their Applications},
     volume = {6},
     year = {1978}
 }
 
 @article{HadamardSearch1963GolombBaumert,
     ISSN = {00029890, 19300972},
-    URL = {http://www.jstor.org/stable/2312777},
+    url = {\url{http://www.jstor.org/stable/2312777}},
     author = {Solomon W. Golomb and Leonard D. Baumert},
     journal = {The American Mathematical Monthly},
     number = {1},
     pages = {12-17},
     publisher = {Mathematical Association of America},
-    title = {The Search for Hadamard Matrices},
+    title = {The Search for {Hadamard} Matrices},
     volume = {70},
     year = {1963}
 }
 
 @article{HadamardCodingTheoretic1992AssmusKey,
     ISSN = {00029947},
-    URL = {http://www.jstor.org/stable/2154164},
+    url = {\url{http://www.jstor.org/stable/2154164}},
     author = {E. F. Assmus and J. D. Key},
     journal = {Transactions of the American Mathematical Society},
     number = {1},
     pages = {269-293},
     publisher = {American Mathematical Society},
-    title = {Hadamard Matrices and Their Designs: A Coding-Theoretic Approach},
+    title = {{Hadamard} Matrices and Their Designs: A Coding-Theoretic Approach},
     volume = {330},
     year = {1992}
 }
 
 @article{HadamardDesigns1972Spence,
     ISSN = {00029939, 10886826},
-    URL = {http://www.jstor.org/stable/2038298},
+    url = {\url{http://www.jstor.org/stable/2038298}},
     author = {Edward Spence},
     journal = {Proceedings of the American Mathematical Society},
     number = {1},
@@ -120,7 +120,7 @@
 
 @article{PolynomialDNA2013OztasSiap,
     ISSN = {03545180, 24060933},
-    URL = {http://www.jstor.org/stable/24896375},
+    url = {\url{http://www.jstor.org/stable/24896375}},
     author = {Elif Segah Oztas and Irfan Siap},
     journal = {Filomat},
     number = {3},
@@ -133,7 +133,7 @@
 
 @article{CodesCiphers1010Baylis,
     ISSN = {00255572},
-    URL = {http://www.jstor.org/stable/25759725},
+    url = {\url{http://www.jstor.org/stable/25759725}},
     author = {John Baylis},
     journal = {The Mathematical Gazette},
     number = {531},
@@ -146,7 +146,7 @@
 
 @article{CodesOrigins1978Pless,
     ISSN = {00029890, 19300972},
-    URL = {http://www.jstor.org/stable/2321784},
+    url = {\url{http://www.jstor.org/stable/2321784}},
     author = {Vera Pless},
     journal = {The American Mathematical Monthly},
     number = {2},
@@ -159,50 +159,54 @@
 
 @article{BooleRecords1956Kneale,
     ISSN = {00359149},
-    URL = {http://www.jstor.org/stable/530792},
+    url = {\url{http://www.jstor.org/stable/530792}},
     author = {W. Kneale},
     journal = {Notes and Records of the Royal Society of London},
     number = {1},
     pages = {53-63},
     publisher = {The Royal Society},
-    title = {Boole and the Algebra of Logic},
+    title = {{Boole} and the Algebra of Logic},
     volume = {12},
     year = {1956}
 }
 
 @inproceedings{DegeneracyHadamard2008Petoukhov,
-    title = {The degeneracy of the genetic code and Hadamard matrices},
+    booktitle = {XX  International Congress of Genetics},
+    title = {The degeneracy of the genetic code and {Hadamard} matrices},
     author = {Sergey V. Petoukhov},
     year = {2008},
-    URL = {https://arxiv.org/pdf/0802.3366.pdf},
+    url = {\url{https://arxiv.org/pdf/0802.3366.pdf}},
 }
 
 @article{MultilevelConstruction2008TrinhFan,
     author = {Trinh, Q.K. and Fan, Pingzhi},
     year = {2008},
     month = {11},
-    pages = {1250 - 1252},
-    title = {Construction of multilevel Hadamard matrices with small alphabet},
+    pages = {{1250--1252}},
+    title = {Construction of multilevel {Hadamard} matrices with small alphabet},
     volume = {44},
     booktitle = {Electronics Letters}
 }
 
 @article{DecodingHamming2006Eherenborg,
     ISSN = {10724117, 19476213},
-    URL = {http://www.jstor.org/stable/25678619},
+    url = {\url{http://www.jstor.org/stable/25678619}},
     author = {Richard Ehrenborg},
     journal = {Math Horizons},
     number = {4},
     pages = {16-17},
     publisher = {Mathematical Association of America},
-    title = {Decoding the Hamming Code},
+    title = {Decoding the {Hamming} Code},
     volume = {13},
     year = {2006}
 }
 
-@misc{PEPDocstrings2014Goodger,
-    title = {PEP 257: Docstring conventions},
-    author = {David Goodger and  Guido van Rossum},
+@techreport{PEPDocstrings2014Goodger,
+    type = {{PEP}},
+    key = {{PEP} 257},
+    title = {Docstring conventions},
+    author = {David Goodger and Guido van Rossum and others},
+    institution = {Python Software Foundation},
     year = {2014},
     howpublished = {PEP at \textit{https://legacy.python.org/dev/peps/pep-0257}},
     version = {9b715d8246db}
@@ -211,6 +215,154 @@
 @article{CRISPRDailymail,
     author= {{Daily Mail}},
     title = {{WHAT IS CRISPR-CAS9?}},
-    URL = {http://www.dailymail.co.uk/sciencetech/fb-5151843/WHAT-CRISPR-CAS9.html},
+    url = {\url{http://www.dailymail.co.uk/sciencetech/fb-5151843/WHAT-CRISPR-CAS9.html}},
     year = {2015},
+}
+
+@techreport{ASCII1963ASA,
+    type = {Standard},
+    key = {{X3.4-1963}},
+    author = {{X3.4-1963}},
+    title = {American Standard Code for Information Interchange},
+    year = {1963},
+    month = jun,
+    institution = {American Standards Association}
+}
+
+@article{OrthogonalMatrix1867Sylvester,
+    author = { J.J.   Sylvester },
+    title = {Thoughts on inverse orthogonal matrices, simultaneous
+    signsuccessions, and tessellated pavements in two or more colours, with
+    applications to {Newton}'s rule, ornamental tile-work, and the theory of numbers},
+    journal = {The London, Edinburgh, and Dublin Philosophical Magazine and Journal of Science},
+    volume = {34},
+    number = {232},
+    pages = {461-475},
+    year  = {1867},
+    publisher = {Taylor & Francis},
+    doi = {10.1080/14786446708639914},
+    url = {\url{https://doi.org/10.1080/14786446708639914}},
+    eprint = {https://doi.org/10.1080/14786446708639914}
+}
+
+@article{CRISPRImmune2010Horvath,
+    ISSN = {00368075, 10959203},
+    url = {\url{http://www.jstor.org/stable/40508808}},
+    author = {Philippe Horvath and Rodolphe Barrangou},
+    journal = {Science},
+    number = {5962},
+    pages = {167--170},
+    publisher = {American Association for the Advancement of Science},
+    title = {{CRISPR}/Cas, the Immune System of Bacteria and Archaea},
+    volume = {327},
+    year = {2010}
+}
+
+@article{CRISPER2016Finneran,
+    ISSN = {07485492, 19381557},
+    url = {\url{http://www.jstor.org/stable/24727056}},
+    author = {Kevin Finneran},
+    journal = {Issues in Science and Technology},
+    number = {3},
+    pages = {33--34},
+    publisher = {University of Texas at Dallas},
+    title = {Responding to {CRISPER}/Cas9 [sic]},
+    volume = {32},
+    year = {2016}
+}
+
+@article{RNAHIV2014Hu,
+    ISSN = {00278424},
+    url = {\url{http://www.jstor.org/stable/23805815}},
+    author = {Wenhui Hu and Rafal Kaminski and Fan Yang and Yonggang Zhang and Laura Cosentino and Fang Li and Biao Luo and David Alvarez-Carbonell and Yoelvis Garcia-Mesa and Jonathan Karn and Xianming Mo and Kamel Khalili},
+    journal = {Proceedings of the National Academy of Sciences of the United States of America},
+    number = {31},
+    pages = {11461--11466},
+    publisher = {National Academy of Sciences},
+    title = {{RNA}-directed gene editing specifically eradicates latent and prevents new {HIV-1} infection},
+    volume = {111},
+    year = {2014}
+}
+
+@misc{WikiCRISPR,
+    author = {Wikipedia},
+    title  = {{CRISPR} --- {W}ikipedia{,} The Free Encyclopedia},
+    year   = {2018},
+    url    = {\url{https://en.wikipedia.org/wiki/CRISPR}},
+    note   = {[Online; accessed 10 February 2018]}
+}
+
+@misc{WikiCas9,
+    author = {Wikipedia},
+    title  = {Cas9 --- {W}ikipedia{,} The Free Encyclopedia},
+    year   = {2018},
+    url    = {\url{https://en.wikipedia.org/wiki/Cas9}},
+    note   = {[Online; accessed 11 February 2018]}
+}
+
+@misc{WikiHadamardCode,
+    author = {Wikipedia},
+    title  = {{Hadamard} Code --- {W}ikipedia{,} The Free Encyclopedia},
+    year   = {2018},
+    url    = {\url{https://en.wikipedia.org/wiki/Hadamard_Code}},
+    note   = {[Online; accessed 10 April 2018]}
+}
+
+@misc{WikiHadamardMatrix,
+    author = {Wikipedia},
+    title  = {{Hadamard} Matrix --- {W}ikipedia{,} The Free Encyclopedia},
+    year   = {2018},
+    url    = {\url{https://en.wikipedia.org/wiki/Hadamard_Matrix}},
+    note   = {[Online; accessed 10 April 2018]}
+}
+
+@misc{WikiHammingCode,
+    author = {Wikipedia},
+    title  = {{Hamming} Code --- {W}ikipedia{,} The Free Encyclopedia},
+    year   = {2018},
+    url    = {\url{https://en.wikipedia.org/wiki/Hamming_Code}},
+    note   = {[Online; accessed 3 April 2018]}
+}
+
+@misc{WikiHamming74,
+    author = {Wikipedia},
+    title  = {{Hamming}$(7,4)$ --- {W}ikipedia{,} The Free Encyclopedia},
+    year   = {2018},
+    url    = {\url{https://en.wikipedia.org/wiki/Hamming(7,4)}},
+    note   = {[Online; accessed 3 April 2018]}
+}
+
+@misc{WikiBarcoding,
+    author = {Wikipedia},
+    title  = {{DNA} Barcoding --- {W}ikipedia{,} The Free Encyclopedia},
+    year   = {2018},
+    url    = {\url{https://en.wikipedia.org/wiki/DNA_barcoding}},
+    note   = {[Online; accessed 15 June 2018]}
+}
+
+@article{Parity2008Knuth,
+    ISSN = {00029890, 19300972},
+    URL = {\url{http://www.jstor.org/stable/27642574}},
+    author = {Donald Knuth and Robin Chapman and Reiner Martin},
+    journal = {The American Mathematical Monthly},
+    number = {7},
+    pages = {668--670},
+    publisher = {Mathematical Association of America},
+    title = {Perfect Parity Patterns: 11243},
+    volume = {115},
+    year = {2008}
+}
+
+@article{FuzzyDistance1977SGarro,
+    ISSN = {03732908},
+    URL = {\url{http://www.jstor.org/stable/43680301}},
+    abstract = {A generalization of the usual Hamming distance is investigated; in our case the arguments are sequences of real numbers which belong to the unit interval |0, 1]. This generalization is useful when multi-valued logics are needed instead of the ordinary "yes-no" logic.},
+    author = {A. Sgarro},
+    journal = {Bulletin mathématique de la Société des Sciences Mathématiques de la République Socialiste de Roumanie},
+    number = {1/2},
+    pages = {137--144},
+    publisher = {Societatea de Științe Matematice din România},
+    title = {A FUZZY HAMMING DISTANCE},
+    volume = {21 (69)},
+    year = {1977}
 }
